<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_greet"
        android:textAlignment="center"
        android:textSize="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


        <Button
            android:id="@+id/wa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/wa"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/nsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wa"
            android:layout_alignRight="@+id/wa"
            android:layout_below="@+id/wa"
            android:text="@string/nsw"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/vic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nsw"
            android:layout_alignRight="@+id/nsw"
            android:layout_below="@+id/nsw"
            android:text="@string/vic"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/qld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/vic"
            android:layout_alignRight="@+id/vic"
            android:layout_below="@+id/vic"
            android:text="@string/qld"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/tas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/qld"
            android:layout_below="@+id/qld"
            android:layout_alignRight="@+id/qld"
            android:text="@string/tas"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tas"
            android:layout_alignRight="@+id/tas"
            android:layout_below="@+id/tas"
            android:text="@string/sa"
            android:textStyle="bold"/>
    </RelativeLayout>

</RelativeLayout>
